# proxmox-manager-api

./: .gitignore  README.md  env  pyproject.toml
app/: main.py
app/access/: dto.py  manager.py  model.py  repository.py  service.py
app/api/: access_tokens.py  audit_logs.py  auth.py  cloud.py  container_actions.py  containers.py  health.py  jobs.py  monitoring.py  templates.py  users.py  websocket.py
app/cloud/: __init__.py  auth_service.py  connection_manager.py  container_provision_service.py  crypto.py  dispatcher.py  dto.py  manager.py  models.py  protocol.py  published_container_service.py  publisher.py  repository.py  sync_service.py  websocket_client.py
app/components/: EchoComponents.py  __init__.py  base_components.py  base_system_component.py  curl_component.py  definition.py  dummy_component.py  git_component.py  registry.py  tailscale_component.py
app/console/: console_manager.py  pty_session.py  websocket_console.py
app/core/: dependencies.py  event_bus.py  exceptions.py  settings.py
app/database/: create_tables.py  session.py
app/models/: __init__.py  audit_log.py  container.py  container_action.py  job.py  network_configuration.py  os_template.py  user.py
app/monitoring/: __init__.py  dtos.py  metrics_collector.py  publisher.py  (+1 more)
docs/: authentication.md  cloud_integration_flow.md  container_creation_workflow_analysis.md  websocket_work.md
migrations/: env.py
tests/: test_auth_security.py  test_container_provision.py  test_container_service.py  test_environment_changed.py  test_event_bus.py  test_monitoring.py  test_proxmox_client.py
(+100 files in other folders)
