[project]
name = "proxmox-maganer-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "cryptography>=44.0.0",
    "fastapi[standard]>=0.138.1",
    "httpx>=0.28.0",
    "proxmoxer>=2.3.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "PyJWT>=2.10.1",
    "pwdlib[bcrypt]>=0.3.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "websockets>=15.0",
]
